--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
               <a href="#section-3" class="navbar-link pointer-enter">
                 Education</a
               >
-              <a href="#section-4" class="navbar-link pointer-enter"
-                >My Works</a
-              >
+              <a href="#section-4" class="navbar-link pointer-enter">My Work</a>
               <a href="contact.html" class="navbar-link pointer-enter"
                 >Contact</a
               >
