--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,12 @@
               </div>
               <div class="project__info">
                 <div class="project__title">
-                  <h3 class="heading-3">Cortina Jewellery</h3>
+                  <a
+                    href="https://cortinacraft.dev.screencraft.net.au/"
+                    class="project__link"
+                    target="_blank"
+                    ><h3 class="heading-3">Cortina Jewellery</h3></a
+                  >
 
                   <h5 class="heading-5">Ecommerce Wordpress Website</h5>
                 </div>
@@ -96,26 +101,35 @@
             <div class="project">
               <div class="project__img-box">
                 <img
-                  src="img/waccc-website.jpg"
-                  alt="comfort"
+                  src="img/Lessons-I-Learned-Today.jpg"
+                  alt="My note book"
                   class="w-100 p-0"
                 />
               </div>
               <div class="project__info">
                 <div class="project__title">
-                  <h3 class="heading-3">WACCC Church Website</h3>
-                  <h5 class="heading-5">Wordpress Website</h5>
+                  <a
+                    href="wacccmedia.com"
+                    target="_blank"
+                    class="project__link"
+                  >
+                    <h3 class="heading-3">My Notebook</h3></a
+                  >
+
+                  <h5 class="heading-5">Web Applicaiton</h5>
                 </div>
                 <hr />
                 <div class="project__descriptions pt-4">
                   <p class="mt-3">
-                    Western Australia Chin Christian Church (WACCC) is a
-                    community Church located in Caversham, Western Australia.
+                    My Notebook is an easy-to-use web app made for high school
+                    students to write and organize their notes. It's designed to
+                    improve the note-taking experience, making it efficient and
+                    clear for academic success.
                   </p>
                   <p>
                     visit
                     <a
-                      href="https://wacccmedia.com"
+                      href="https://myschoolnotebook.netlify.app"
                       target="_blank"
                       class="link p-0"
                     >
@@ -126,7 +140,7 @@
               </div>
             </div>
 
-            <div class="project">
+            <!-- <div class="project">
               <div class="project__img-box">
                 <img
                   src="img/comfort-shoes-cover.jpg"
@@ -136,6 +150,11 @@
               </div>
               <div class="project__info">
                 <div class="project__title">
+                  <a
+                    href="project-single.html"
+                    class="project__link"
+                    target="_blank"
+                  ></a>
                   <h3 class="heading-3">Comfort Shoes</h3>
                   <h5 class="heading-5">Mobile App</h5>
                 </div>
@@ -155,7 +174,7 @@
                   </p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <!-- End of Projects Section -->
